# notGHMM

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  notghmm.pc.cmake.in
cmake/Modules/: FindFLANN.cmake
doc/: CMakeLists.txt  config
notghmm/: CMakeLists.txt  bw_test.c  genseq_test.c  init_test.c  notghmm.c  notghmm.h  utils.c  utils.h  writeread_test.c
src/: CMakeLists.txt  bw_test.c  genseq_test.c  notghmm.c  notghmm.h  utils.c  utils.h
